--- a/src/app/mobile-validation/mobile-validation.component.css
+++ b/src/app/mobile-validation/mobile-validation.component.css
@@ -21,11 +21,22 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-image: url(https://cdn.prod.website-files.com/67d94a83b4dcb2e406b897dc/67dfe09331ad3adc06291810_Hero%20Section%20V2%20Bg.jpg);
+    /* background-image: url(https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/3176-166338965_medium.mp4?alt=media&token=26b4e6de-d542-462e-a906-47bb1fc6f892); */
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+.vedio {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+    filter: blur(5px) brightness(0.7) !important;
 }
 
 body {
@@ -34,7 +45,7 @@ body {
     flex-direction: column;
     align-items: center;
     background: var(--secondary-color);
-    color: var(--text-color);
+    color: white !important;
 }
 
 /* Page animation */
@@ -88,23 +99,23 @@ nav {
     margin: 0vw 0vw;
     padding: 4vw 2vw;
     background: transparent;
-    color: #111;
+    color: white;
 }
 
 button {
-    border: 2px solid black;
+    border: 2px solid white;
     padding: .5vw 1vw;
     border-radius: 40px;
     background: transparent;
-    color: black;
+    color: white;
     cursor: pointer;
     font-size: 1.2vw;
     transition: all 0.4s ease;
 }
 
 button:hover {
-    background: black;
-    color: white;
+    background: white;
+    color: black;
 }
 
 .login-container h2 {
@@ -156,11 +167,11 @@ nav a {
 /* .login-container loginTitle {} */
 
 .login-container h2 {
-    font-family: 'Funnel Display', sans-serif;
+    /* font-family: 'Funnel Display', sans-serif; */
     font-weight: 700;
     margin-bottom: 1rem;
     text-align: center;
-    color: black;
+    color: white;
     font-size: 3vw;
 }
 
@@ -188,16 +199,16 @@ nav a {
     margin: 0vw 11vw;
     padding: .5vw 0vw;
     background-color: transparent;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid white;
+    color: white;
     font-size: 1.2vw;
     font-weight: 700;
     transition: all 0.3s ease;
 }
 
 .validate-button:hover {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
 
 .error-message {
@@ -301,15 +312,15 @@ input {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #f5f5f5;
+    background: black;
     color: var(--text-color);
     text-decoration: none;
     transition: background 0.3s;
 }
 
 .social-icons a:hover {
-    background: var(--primary-color);
-    color: #fff;
+    background: white;
+    color: black;
 }
 
 /* ----------  SIGN-UP FOOTER LINK  ---------- */
