--- a/src/app/mobile-validation/mobile-validation.component.html
+++ b/src/app/mobile-validation/mobile-validation.component.html
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <div class="vedio">
+      <video autoplay loop muted [playsInline]="true">
+        <source
+          src="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/202987-919379330_small.mp4?alt=media&token=0fa091c9-3722-466a-98cd-1531076d7561"
+          type="video/mp4"
+        />
+      </video>
+    </div>
     <div class="page-animation">
       <!-- <div class="step">
         <h1>.01</h1>
