--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -19,7 +19,12 @@
             style="font-size: 20px"
             gap="10px"
           ></i> </a
-        ><span style="font-size: 2vw"><strong> Tech-M SIM/ESIM</strong> </span>
+        ><span
+          style="font-size: 2vw"
+          style="font-size: clamp(18px, 4vw, 42px)"
+          id="spaning"
+          ><strong> Tech-M SIM/ESIM</strong>
+        </span>
       </div>
 
       <div class="items">
