--- a/src/app/recharge/recharge.component.html
+++ b/src/app/recharge/recharge.component.html
@@ -27,7 +27,10 @@
               style="font-size: 20px"
               gap="10px"
             ></i> </a
-          ><span style="font-size: 2vw"
+          ><span
+            style="font-size: 2vw"
+            style="font-size: clamp(18px, 4.5vw, 42px)"
+            id="spaning"
             ><strong> Tech-M SIM/ESIM</strong>
           </span>
         </div>
