--- a/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/admin-dashboard/admin-dashboard.component.css
@@ -22,7 +22,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-image: url(https://cdn.prod.website-files.com/67d94a83b4dcb2e406b897dc/67e101d46b20be04c7d9edde_Process%20bg.png);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/particle-burst-golden-sparkle-shimmer-background-illustration.jpg?alt=media&token=65906f07-94c0-416e-adec-0a0b39519011);
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
