--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
           <form>
             <!-- Form content goes here -->
           </form>
+          <!-------Router outlet-------->
           <router-outlet></router-outlet>
         </div>
       </main>
