Final Angular Deployment favicon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
             <!-- Form content goes here -->
           </form>
           <!-------Router outlet-------->
+          <!------------Routing will start here-->
           <router-outlet></router-outlet>
         </div>
       </main>
