Routing were done

--- a/src/app/recharge/recharge.component.html
+++ b/src/app/recharge/recharge.component.html
@@ -59,7 +59,7 @@
               <p>84 Days-Validity</p>
             </div>
           </div>
-          <a href="#cat" class="plan1-button">
+          <a [routerLink]="[]" fragment="cat" class="plan1-button">
             <button class="plan1-button">Select Plan</button>
           </a>
           <div class="plan1-content">
@@ -83,7 +83,7 @@
               <span> Rs.379 </span>
               <p>56 Days-Validity</p>
             </div>
-            <a href="#cat" class="plan1-button">
+            <a [routerLink]="[]" fragment="cat" class="plan1-button">
               <button class="plan1-button">Select Plan</button>
             </a>
 
@@ -109,7 +109,7 @@
               <span> Rs.249 </span>
               <p>28 Days-Validity</p>
             </div>
-            <a href="#cat" class="plan1-button">
+            <a [routerLink]="[]" fragment="cat" class="plan1-button">
               <button class="plan1-button">Select Plan</button>
             </a>
             <div class="plan1-content">
@@ -136,7 +136,7 @@
               <p>21 Days-Validity</p>
             </div>
 
-            <a href="#cat" class="plan1-button">
+            <a [routerLink]="[]" fragment="cat" class="plan1-button">
               <button class="plan1-button">Select Plan</button>
             </a>
             <div class="plan1-content">
@@ -161,7 +161,7 @@
               <p>14 Days-Validity</p>
             </div>
 
-            <a href="#cat" class="plan1-button">
+            <a [routerLink]="[]" fragment="cat" class="plan1-button">
               <button class="plan1-button">Select Plan</button>
             </a>
             <div class="plan1-content">
