Routing were background color

--- a/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/admin-dashboard/admin-dashboard.component.css
@@ -22,6 +22,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    background-color: black;
     background-image: url(https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/67e101d46b20be04c7d9edde_Process%20bg.png?alt=media&token=f0af37a8-495d-45f4-adac-761472b50f6c);
     background-position: 50% 0;
     background-size: cover;
