--- a/src/app/recharge/recharge.component.css
+++ b/src/app/recharge/recharge.component.css
@@ -26,6 +26,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    background-color: black;
     background-image: url(https://cdn.prod.website-files.com/67d94a83b4dcb2e406b897dc/67e0d09ab795eb7cff270e70_Features%20Bg%20V2.png);
     background-position: 50% 0;
     background-size: cover;
