--- a/src/app/recharge/recharge.component.css
+++ b/src/app/recharge/recharge.component.css
@@ -551,17 +551,17 @@ footer {
 
     nav .items {
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         gap: 1rem;
         align-items: center;
         width: 100%;
     }
 
     nav .items button {
-        width: 100%;
+        width: 50%;
         padding: 1.5vw 0;
         font-size: 4vw;
-        border-radius: 10px;
+        border-radius: 30px;
         border-width: 2px;
     }
 
@@ -697,15 +697,22 @@ footer {
     /* SUBSCRIBER INFO */
     .subscriber-info {
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        /* flex-direction: column; */
+        align-items: center;
+        text-align: center;
+        justify-content: center;
         gap: 1vw;
-        padding: 2vw 0;
+        padding: 2vw 1vw;
         font-size: 4vw;
     }
 
     .subscriber-info i {
-        font-size: 6vw;
+        font-size: 5vw;
+        margin-bottom: 1vw;
+    }
+
+    .subscriber-info span {
+        font-size: 5vw;
         margin-bottom: 1vw;
     }
 
