Final deploy navigation

--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -31,7 +31,7 @@
 
       <h1>Payment Successful!</h1>
       <p>Your payment was completed successfully.</p>
-      <p class="transaction-id">Transaction ID: {{ transactionId }}</p>
+      <p class="transaction-id">Transaction completed</p>
       <button class="btn-home" onclick="location.href='index.html'">
         Back to Home
       </button>
