--- a/src/app/user-register/user-register.component.css
+++ b/src/app/user-register/user-register.component.css
@@ -22,6 +22,7 @@ body {
     min-height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
 .container {
