--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -30,7 +30,7 @@
               <i class="fas fa-user"></i>
               <input
                 type="text"
-                id="username"
+                id="name"
                 formControlName="username"
                 placeholder="Username"
                 required
