--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -20,14 +20,17 @@
             gap="10px"
           ></i> </a
         ><span
-          style="font-size: 2vw"
-          style="font-size: clamp(18px, 4vw, 42px)"
+          style="font-size: 1vw"
+          style="font-size: clamp(18px, 2vw, 42px)"
           id="spaning"
-          ><strong> Tech-M SIM/ESIM</strong>
+          ><strong> Mobi-Comm Ltd.</strong>
         </span>
       </div>
 
       <div class="items">
+        <button>
+          <a routerLink="/add-customer"><strong> Add Customer </strong></a>
+        </button>
         <button>
           <a routerLink="/"><strong> User Recharge </strong></a>
         </button>
@@ -41,9 +44,9 @@
         <h2
           style="
             text-align: center;
-            margin-bottom: 2rem;
-            font-size: 2.5vw;
-            color: black;
+
+            font-size: 2.8vw;
+            color: white;
           "
         >
           <i class="fas fa-tachometer-alt" style="margin-right: 0.5vw"></i>
@@ -54,7 +57,7 @@
           <div class="card-header">
             <h3>
               <i class="fas fa-users"></i>
-              Expiring Subscribers
+              <strong>Expiring Subscribers</strong>
             </h3>
           </div>
           <div class="card-body">
@@ -98,7 +101,7 @@
           <div class="card-header">
             <h3>
               <i class="fas fa-history"></i>
-              Recharge History
+              <strong>Recharge History</strong>
             </h3>
           </div>
           <div class="card-body">
