--- a/src/app/mobile-validation/mobile-validation.component.html
+++ b/src/app/mobile-validation/mobile-validation.component.html
@@ -35,10 +35,10 @@
               gap="10px"
             ></i> </a
           ><span
-            style="font-size: 2vw"
-            style="font-size: clamp(18px, 4.5vw, 42px)"
+            style="font-size: 1vw"
+            style="font-size: clamp(18px, 2vw, 42px)"
             id="spaning"
-            ><strong> Tech-M SIM/ESIM</strong>
+            ><strong> Mobi-Comm Ltd.</strong>
           </span>
         </div>
 
